--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+
+<script src="JS/form.js"></script>
+<script src="JS/game.js"></script>
+<script src="JS/player.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
