--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
+
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyApkBmlOXuupi9x0IAJR0asb2eMtzdIrSM",
-    authDomain: "c-34-9efc2.firebaseapp.com",
-    databaseURL: "https://c-34-9efc2.firebaseio.com",
-    projectId: "c-34-9efc2",
-    storageBucket: "c-34-9efc2.appspot.com",
-    messagingSenderId: "471007167333",
-    appId: "1:471007167333:web:c38065d3074cc86ef3978c"
+    apiKey: "AIzaSyBs3UHok2R26nt0WRjAgQ0z_m1l17s-uAo",
+    authDomain: "class38-5dd18.firebaseapp.com",
+    databaseURL: "https://class38-5dd18.firebaseio.com",
+    projectId: "class38-5dd18",
+    storageBucket: "class38-5dd18.appspot.com",
+    messagingSenderId: "760644295700",
+    appId: "1:760644295700:web:789527c45ccf76f4159b01"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
